--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, user %>
-  <% user.suppervisor? ? 'Suppervisor' : 'Member' %>
+  | <%= user.suppervisor? ? 'Suppervisor' : 'Member' %>
 </li>
