Edit subject for suppervisor

--- a/app/views/suppervisor/users/_user.html.erb
+++ b/app/views/suppervisor/users/_user.html.erb
@@ -1,7 +1,7 @@
 <li>
   <%= gravatar_for user, size: 50 %>
   <%= link_to user.name, edit_suppervisor_user_path(user) %>
-  | <% user.suppervisor? ? 'Suppervisor' : 'Member'%>
+  | <%= user.suppervisor? ? 'Suppervisor' : 'Member'%>
   | <%= link_to_if !current_user?(user), "delete", suppervisor_user_path(user), 
     method: :delete, data: {confirm: "You sure?"} %>
 </li>
