--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -10,26 +10,26 @@
             suppervisor_users_path : users_path %>
           </li>          
           <% if suppervisor_user? %>
-          <li>
-            <%= link_to "Course", suppervisor_courses_path %>
-          </li>
-          <li>
-            <%= link_to "Subjects", suppervisor_subjects_path %>
-          </li>
+            <li>
+              <%= link_to "Course", suppervisor_courses_path %>
+            </li>
+            <li>
+              <%= link_to "Subjects", suppervisor_subjects_path %>
+            </li>
           <% else %>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              Course <b class="caret"></b>
-            </a>
-            <ul class="dropdown-menu">
-              <li><%= link_to "Subjects", course_subjects_path(current_course) %></li>
-              <li><%= link_to "Members", course_members_path(current_course) %></li>     
-            </ul>
-          </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                Course <b class="caret"></b>
+              </a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "Subjects", current_course ? course_subjects_path(current_course) : "#" %></li>
+                <li><%= link_to "Members", current_course ? course_members_path(current_course) : "#" %></li>     
+              </ul>
+            </li>
+            <li>
+              <%= link_to "Report", user_reports_path(current_user) %>
+            </li>
           <% end %>
-          <li>
-            <%= link_to "Report", user_reports_path(current_user) %>
-          </li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
               Account <b class="caret"></b>
