--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,11 @@
 <% if logged_in? %>
-  <div class="row">
-    <aside class="col-md-4">
-      <section class="user_info">
-        User Infomation
-      </section>
-    </aside>
-    <div class="col-md-8">
-    </div>
-  </div>
+  <% if !@activities.nil? %>
+    <% provide :title, "Course activities" %>
+    <h1>Activities</h1>   
+    <ul class="users">
+      <%= render @activities %>
+    </ul>   
+  <% end %>
 <% else %>
   <div class="center jumbotron">
     <h1>Welcome to Framgia Training System</h1>
