--- a/app/views/suppervisor/course_subjects/show.html.erb
+++ b/app/views/suppervisor/course_subjects/show.html.erb
@@ -25,5 +25,5 @@
       <% end %>
     </tbody>
   </table> 
-  <button type="submit" class="btn btn-default">Save</button>
+  <button type="submit" class="btn btn-primary">Save</button>
 <% end %>
