--- a/app/views/suppervisor/courses/new.html.erb
+++ b/app/views/suppervisor/courses/new.html.erb
@@ -8,6 +8,6 @@
       <label>Description</label>
       <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
     </div>
-    <button type="submit" class="btn btn-default">Create</button>
+    <%= f.submit "Create", class: "btn btn-primary" %>
   <% end %>
 </div>
