--- a/app/views/subjects/edit.html.erb
+++ b/app/views/subjects/edit.html.erb
@@ -27,5 +27,14 @@
       <% end %>
     </tbody>
   </table>
-  <button type="submit" class="btn btn-default">Save</button>
+  <button type="submit" class="btn btn-primary" style="float:left">Save</button>
+<% end %>
+<%= form_for [current_user, @subject] do |f| %>
+  <% if @subject.status(current_user,current_course) %>
+      <%= f.hidden_field :status, value: false %>
+      <button type="submit" class="btn btn-default" style="margin-left:10px">Uncomplete</button>
+    <% else %>
+      <%= f.hidden_field :status, value: true %>
+      <button type="submit" class="btn btn-primary" style="margin-left:10px">Complete</button>
+  <% end %>
 <% end %>
