--- a/app/views/suppervisor/courses/edit.html.erb
+++ b/app/views/suppervisor/courses/edit.html.erb
@@ -8,6 +8,6 @@
       <label>Description</label>
       <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
     </div>
-    <button type="submit" class="btn btn-default">Save</button>
+    <button type="submit" class="btn btn-primary">Save</button>
   <% end %>
 </div>
