--- a/app/views/suppervisor/subjects/_form.html.erb
+++ b/app/views/suppervisor/subjects/_form.html.erb
@@ -12,5 +12,5 @@
     <% end %>
     <li><%= link_to_add_fields "Add Task", f, :tasks %></li>
   </ul>
-  <p><%= f.submit "Submit" %></p>
+  <p><%= f.submit "Submit", class: "btn btn-primary" %></p>
 <% end %>
