--- a/app/views/suppervisor/courses/index.html.erb
+++ b/app/views/suppervisor/courses/index.html.erb
@@ -43,7 +43,7 @@
               <%= f.submit "Start", class: "btn btn-primary" %>
             <% end %>
           <% else %>
-            <button class="btn btn-default">Started</button>
+            <button class="btn btn-default" style="width:100%">Started</button>
           <% end %>
         </td>
         <td>
@@ -54,10 +54,10 @@
                 <%= f.submit "Finish", class: "btn btn-primary" %>
               <% end %>
             <% else %>
-              <button class="btn btn-default">Finished</button>
+              <button class="btn btn-default" style="width:100%">Finished</button>
             <% end %>
           <% else %>
-            <button class="btn btn-default">Finish</button>
+            <button class="btn btn-default" style="width:100%">Finish</button>
           <% end %>
         </td>
         <td>
