--- a/app/views/members/show.html.erb
+++ b/app/views/members/show.html.erb
@@ -2,12 +2,6 @@
 <h1><%= @course.name %></h1>
 <%= will_paginate %>
 <ul class="users">
-  <% @members.each do |user| %>
-    <li>
-      <%= gravatar_for user, size: 50 %>
-      <%= link_to user.name, user %>
-      | <%= user.suppervisor? ? 'Suppervisor' : 'Member' %>
-    </li>
-  <% end %>
+  <%= render @members %>
 </ul>
 <%= will_paginate %>
