--- a/app/views/suppervisor/courses/edit.html.erb
+++ b/app/views/suppervisor/courses/edit.html.erb
@@ -1,13 +1,7 @@
-<div class="bs-example" data-example-id="basic-forms">
-  <%= form_for [:suppervisor, @course], method: :patch do |f| %>
-    <div class="form-group">
-      <label>Name</label>
-      <%= f.text_field :name, class: "form-control", placeholder: "Name" %>
-    </div>
-    <div class="form-group">
-      <label>Description</label>
-      <%= f.text_area :description, class: "form-control", placeholder: "Description" %>
-    </div>
-    <button type="submit" class="btn btn-primary">Save</button>
-  <% end %>
+<% provide(:title, 'Edit Course') %>
+<h1>Edit course infomation</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
+  </div>
 </div>
