--- a/app/views/suppervisor/subjects/show.html.erb
+++ b/app/views/suppervisor/subjects/show.html.erb
@@ -1,4 +1,7 @@
-<% provide(:title, "Edit subject") %>
-<div class="container">
-  <%= render 'form' %>
+<% provide(:title, 'Edit subject') %>
+<h1>Edit subject infomation</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= render 'form' %>
+  </div>
 </div>
