--- a/app/views/suppervisor/users/_user.html.erb
+++ b/app/views/suppervisor/users/_user.html.erb
@@ -5,7 +5,7 @@
     <%= image_tag user.avatar.thumbnail.url %>
   <% end %>
   <%= link_to user.name, edit_suppervisor_user_path(user) %>
-  | <%= user.suppervisor? ? 'Suppervisor' : 'Member'%>
+  <p><%= user.suppervisor? ? 'Suppervisor' : 'Member'%>
   | <%= link_to_if !current_user?(user), "delete", suppervisor_user_path(user), 
-    method: :delete, data: {confirm: "You sure?"} %>
+    method: :delete, data: {confirm: "You sure?"} %></p>
 </li>
