--- a/app/views/suppervisor/users/edit.html.erb
+++ b/app/views/suppervisor/users/edit.html.erb
@@ -1,5 +1,5 @@
 <% provide(:title, "Edit profile") %>
-<h1>Update your profile</h1>
+<h1>Update profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for([:suppervisor, @user], html: {multipart: true})do |f| %>
