--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,2 +1,3 @@
 <% provide(:title, current_user.name) %>
 <%= render partial: "report", collection: @subjects, as: "subject" %>
+<%= will_paginate @subjects %>
