--- a/app/views/subjects/show.html.erb
+++ b/app/views/subjects/show.html.erb
@@ -1,5 +1,4 @@
 <h1><%= @course.name %></h1>
-<%= will_paginate %>
 <table class="table">
   <thead>
     <tr>
@@ -22,4 +21,4 @@
     <% end %>
   </tbody>
 </table>
-<%= will_paginate %>
+<%= will_paginate @subjects %>
