--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,6 @@
 <% provide(:title, 'All users') %>
 <h1>List members</h1>
-<%= will_paginate %>
 <ul class="users">
   <%= render @users %>
 </ul>
-<%= will_paginate %>
+<%= will_paginate @users %>
