Fix error report

--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,3 +1,5 @@
 <% provide(:title, current_user.name) %>
-<%= render partial: "report", collection: @subjects, as: "subject" %>
-<%= will_paginate @subjects %>
+<% unless @subjects.nil? %>
+  <%= render partial: "report", collection: @subjects, as: "subject" %>
+  <%= will_paginate @subjects %>
+<% end %>
